spacing bug

--- a/src/nuance_assets/components/text-editor/_text-editor.scss
+++ b/src/nuance_assets/components/text-editor/_text-editor.scss
@@ -2,7 +2,8 @@
   margin-bottom: 50px;
   border-bottom: solid 1px $text-editor-border;
 
-  p, h1,
+  p,
+  h1,
   h2,
   h3,
   h4,
@@ -12,6 +13,10 @@
   ol, li {
   color: $primary-text-color;
   
+  }
+
+  h1 {
+    font-size: 32px;
   }
 }
 
